# radio-calisthenics-together

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  RadioCalisthenics.command  RadioCalisthenicsRVC.command  RadioCalisthenicsVideo.command  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
assets/overlays/bird/: index.html
audio_process/: .gitignore  Dockerfile  main.py  requirements.txt
audio_process/test_venv/: pyvenv.cfg
config/launchd/: jp.radio-calisthenics-together.bird.plist  jp.radio-calisthenics-together.monitor.plist  jp.radio-calisthenics-together.obs-restart.plist  jp.radio-calisthenics-together.prepare.plist  jp.radio-calisthenics-together.start.plist  jp.radio-calisthenics-together.stop.plist
config/obs/: obs_websocket_settings.md  scene_names.md
docs/: 00_overview.md  01_phase1_setup.md  02_operations.md  99_troubleshoot.md
scripts/: authenticate_youtube.py  bird_director.py  check_status.py  fix_broadcasts.py  gui_app.py  health_monitor.py  install_launchd.sh  prepare_environment.py  restart_obs.sh  run_tests.sh  start_stream.py  stop_stream.py
src/rct/: logger.py  notify.py  obs_client.py  settings.py  youtube_client.py
tests/: test_bird_director.py  test_health_monitor.py  test_logic.py  test_notify.py  test_obs_client.py  test_prepare_environment.py  test_settings.py  test_start_stream.py  test_youtube_client.py
video_process/: Dockerfile  main.py
